Deployments/curl.yaml
apiVersion: v1
kind: Pod
metadata:
 name: curl
spec:
 containers:
 -  name: main
    image: joxxorr/curl
    command: ["sleep", "9999999"]
