Deployments/kubia-deployment-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
      - name: mongodb-data
        hostPath:
          path: /tmp/mongodb
      containers:
      - image: mongo
        name: mongodb
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        ports:
        - containerPort: 27017
          protocol: TCP
