Deployments/kubia-fortune-deployment-git.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune
  labels:
    app: fortune
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortune # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: fortune
    spec:
      containers:
      - image: nginx:alpine
        name: web-server
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
        - name: html
          gitRepo:
            repository: https://github.com/luksa/kubia-website-example.git
            revision: master
            directory: .
