Deployments/kubia-fortune-deployment-memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune
  labels:
    app: fortune
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortune # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: fortune
    spec:
      containers:
      - name: html-generator
        image: luksa/fortune
        volumeMounts:
        - name: html
          mountPath: /var/htdocs
      - name: web-server
        image: nginx:alpine
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: html
        emptyDir:
          medium: Memory
