Deployments/kubia-manual-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-deployment-gpu
  labels:
    creation_method: manual
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        creation_method: manual
        env: prod
    spec:
      containers:
        - name: kubia
          image: joxxorr/kubia
          ports:
            - containerPort: 8080
      nodeSelector:
          gpu: "true"
